22-Jan-2012 Removing 'Commandline: ' prefix from all verbose native build output. It does not improve the readability of the output.

22-Jan-2012 Adding DisableWarnings C options, which takes an Opus.Core.StringArray value. For VisualC, this is a list of compiler warning numbers to disable. For Gcc-like compilers, this is the name of the warning to disable, e.g. for -Wno-used-parameters pass "used-parameters". No warnings are disabled by default.

22-Jan-2012 Opus.Core.StringArray is now cloneable and can be used as an option value.

22-Jan-2012 Improved error checking while cloning reference types used in option collections.

22-Jan-2012 Improved error message if an option value has not been given a default.

21-Jan-2012 Fixing Opus.Core.RelativePathUtilities.MakeRelativePathAbsoluteToWorkingDir with relative paths containing '..'. These were not collapsed into a canonical pathname.

21-Jan-2012 The compiled assembly for a package is now written to the buildroot, and also a hash of the source code. If this hash is the same for the next run, the assembly is re-used. This can be disabled with the -nocache command line option.

21-Jan-2012 Enabled header dependency generation in C native builds by default. This can be disabled by passing -C.noheaderdeps on the command line to Opus.

21-Jan-2012 Added new plugin package: DependencyGenerator-dev. This adds support for generating .d files containing dependency information from files that have #include statements. Only statements using the quoted version, i.e. #include "file.h" are found. Those using the angle bracket version, i.e. #include <file.h>, are ignored since these are considered to be system headers.

21-Jan-2012 Added Opus.Core.State.Get function with a generic struct type default value argument. If the category/key are not present, the default value is returned.

21-Jan-2012 C.Compiler now has a new abstract property IncludePathCompilerSwitches.
