@@ -49,6 +49,11 @@ namespace Opus.Core
             throw new Exception(System.String.Format("SetNodeOwnership needs to be overridden for module '{0}' of type '{1}' from package '{2}'", node.UniqueModuleName, node.Module.GetType().BaseType.ToString(), node.Package.ToString()), false);
         }
 
+        protected virtual void SetDelegates(DependencyNode node)
+        {
+            throw new Exception(System.String.Format("SetDelegates needs to be overridden for module '{0}' of type '{1}' from package '{2}'", node.UniqueModuleName, node.Module.GetType().BaseType.ToString(), node.Package.ToString()), false);
+        }
+
         public virtual object Clone()
         {
             System.Type optionsType = this.GetType();
