@@ -58,6 +58,7 @@ namespace C
         public LinkerOptionCollection(Opus.Core.DependencyNode node)
         {
             this.InitializeDefaults(node);
+            this.SetDelegates(node);
         }
 
         public string OutputName
