@@ -8,7 +8,7 @@ namespace GccCommon
     // Not sealed since the C++ compiler inherits from it
     public partial class CCompilerOptionCollection : C.CompilerOptionCollection, C.ICCompilerOptions, ICCompilerOptions
     {
-        private void SetDelegates(Opus.Core.Target target)
+        protected override void SetDelegates(Opus.Core.DependencyNode node)
         {
             // common compiler options
             this["ToolchainOptionCollection"].PrivateData = new PrivateData(ToolchainOptionCollectionCommandLine);
@@ -65,8 +65,6 @@ namespace GccCommon
             this.SystemIncludePaths.AddRange(null, compilerInstance.IncludeDirectoryPaths(target));
 
             this.TargetLanguage = C.ETargetLanguage.C;
-
-            this.SetDelegates(target);
         }
 
         public CCompilerOptionCollection()
